test/multifile/Inputs/protocol-conformance/broken.swift
extension X : P { } // expected-error{{type 'X' does not conform to protocol 'P'}}
